# AsdaBot

./: LICENSE  README.md  api_notes.md  justfile  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
asdabot/: api.py  auth.py  browser.py  checkout.py  cli.py  config.py  search.py
docs/: asda_api_notes.md
skills/asdabot/: SKILL.md
tests/: test_login_logic.py
